@@ -36,8 +36,12 @@ class Request_Handler : public ACE_Svc_Handler<ACE_SOCK_STREAM, ACE_MT_SYNCH>
   // = TITLE
   //   This class is the Svc_Handler used by <Acceptor>.
 public:
+
+  /// The default constructor makes sure the right reactor is used.
   Request_Handler (ACE_Thread_Manager *tm = 0);
-  // The default constructor makes sure the right reactor is used.
+
+  /// Dtor..
+  ~Request_Handler (void);
 
 protected:
   virtual int handle_input (ACE_HANDLE fd = ACE_INVALID_HANDLE);
@@ -45,7 +49,19 @@ protected:
   virtual int resume_handler (void);
 
 private:
+  void _incr_ref_count (void);
+  void _decr_ref_count (void);
+
+private:
   size_t  nr_msgs_rcvd_;
+
+  /// Reference count of the number of threads using the handle. This
+  /// is needed  to make sure that one thread doesnt delete the handle
+  /// when the other thread has just resumed the handle..
+  int ref_count_;
+
+  /// The lock for the ref count
+  ACE_Lock *refcount_lock_;
 };
 
 #endif /* ACE_TESTS_THREAD_POOL_REACTOR_RESUME_TEST_H */
